# Centro_Organizacional

./: .env.example  .gitignore  app.py  check_app.py  eda_integracao.py  gunicorn.conf.py  import_inset_blacklist.py  pyproject.toml  requirements.txt
ATUALIZACAO_CALCULO-main/: requirements.txt
ATUALIZACAO_CALCULO-main/ATUALIZACAO_CALCULO-main/: .env.example  .gitignore  README.md  api_atualizacao_calculo.py  calculo_job_queue.py  main.py  verify.py
EDA_Diario/: .gitignore  app.py  blacklist.txt
EDA_Diario/Modulos/: modulo_banco.py  modulo_blacklist.py  (+10 more)
Levantamento de Processos/: .env.example  README.md  main.py  requirements.txt  verify_output_layout.py
blueprints/: __init__.py  eda.py
campanha/: README.md  api_disparo.py  api_dominios.py  api_templates.py  cli.py  config.example.toml  config.toml  core.py  recipients.example.csv  seed_default_template.py
messages_viewer/: __init__.py  analise_processual_jobs.py  levantamento_processual.py  localize.py  page_maintenance.py  plataforma_auth.py  plataforma_auth_store.py  pre_analise_drive_anexos.py  pre_analise_ficha.py  pre_analise_herdeiros.py  pre_analise_processual.py  proposta_pdf.py  proposta_service.py  syscall_audit.py  tabela_juros_calc.py
scripts/: bootstrap_venv.sh  migrate_plataforma_auth_to_mysql.py  reparar_apt_fontes.sh
sql/: alter_memoria_add_requerente_processo_incidente.sql  alter_memoria_calculo_add_feito_por.sql  alter_memoria_calculo_add_status.sql  create_memoria_calculo.sql  insert_memoria_calculo_exemplos.sql
templates/: base_platform.html  index.html  whatsapp.html
(+80 files in other folders)
